# AutomatedSweeps

./: .gitignore  AutomateSweeps.py  Instructions.md  LocateButtons.py  REW.py  Readme.md  Requirements.txt  audio.py  gui_automation.py  main.py  pyproject.toml  rew_api.py  settings.json  textual.tcss  textual_ui.py  utils.py
.github/workflows/: create-app.yml  create-dmg.yml  create-exe.yml  release-exe.yml
assets/Lossless/: BDL.mlp  BDR.mlp  C.mlp  FDR.mlp  FL.mlp  FR.mlp  FWL.mlp  FWR.mlp  SBL.mlp  SBR.mlp  SLA.mlp  SRA.mlp  SWx.mlp  TFL.mlp  TML.mlp  TMR.mlp
package/: AutomatedSweeps.spec
src/: AutomatedSweeps.spec  REW_API.yaml  audio.py  config.py  gui_automation.py  main.py  measurement.py  process.py  rew_api.py  serve.py  ui.py  ui.tcss  utils.py  workflow.py
