[project]
name = "automatedsweeps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "python-vlc>=3.0.21203",
    "requests>=2.32.3",
    "textual>=1.0.0",
    "textual-serve>=1.1.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11.1",
    "textual-dev>=1.7.0",
]
